--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.pyc
 
 # Virtual Environment
 venv/
@@ -28,7 +29,7 @@ ENV/
 env.bak/
 venv.bak/
 .venv310/
-*venv310/*
+
 
 # IDE
 .vscode/
