--- a/.gitignore
+++ b/.gitignore
@@ -20,14 +20,15 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.pyc
 
 # Virtual Environment
-venv/
+.venv/
 env/
 ENV/
 env.bak/
 venv.bak/
-*venv310/*
+.venv310/
 
 # IDE
 .vscode/
@@ -47,11 +48,8 @@ logs/
 *.log
 
 # Storage (audio files, transcripts, vectors)
-backend/__pycache__
+backend/__pycache__/*
 backend/storage/*
-backend/storage/audio/*
-backend/storage/transcripts/*
-backend/storage/vectors/*
 !backend/storage/.gitkeep
 
 # Frontend
@@ -79,7 +77,6 @@ htmlcov/
 *.ipynb
 
 # Model files (large files)
-models/
 *.bin
 *.safetensors
 *.pt
