--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ colorlog==6.10.1
 comm==0.2.3
 contourpy==1.3.2
 coverage==7.12.0
-ctranslate2==4.6.2
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.17
@@ -143,7 +142,6 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.2
-numpy>=2.0.2,<2.1.0  # Required for whisperx, langchain 0.3+ supports numpy 2.x
 notebook==7.5.0
 notebook_shim==0.2.4
 numba==0.62.1
@@ -171,7 +169,6 @@ protobuf==6.33.2
 psutil==7.1.3
 psycopg2-binary==2.9.11
 pure_eval==0.2.3
-pyannote.audio==3.4.0
 pyannote.core==5.0.0
 pyannote.database==5.1.3
 pyannote.metrics==3.2.1
@@ -216,7 +213,6 @@ ruamel.yaml==0.18.16
 ruamel.yaml.clib==0.2.15
 safetensors==0.7.0
 scikit-learn==1.7.2
-scipy==1.15.3
 semver==3.0.4
 Send2Trash==1.8.3
 sentence-transformers==5.1.2
@@ -224,7 +220,6 @@ sentencepiece==0.2.1
 shellingham==1.5.4
 six==1.17.0
 sortedcontainers==2.4.0
-soundfile==0.13.1
 soupsieve==2.8
 soxr==1.0.0
 speechbrain==1.0.3
@@ -245,7 +240,6 @@ tomlkit==0.13.3
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.57.3
 typer==0.20.0
 typing-inspect==0.9.0
 typing_extensions==4.15.0
@@ -260,7 +254,18 @@ webcolors==25.10.0
 webencodings==0.5.1
 websocket-client==1.9.0
 websockets==15.0.1
-whisperx==3.7.4
 widgetsnbextension==4.0.15
 win32_setctime==1.2.0
 yarl==1.22.0
+
+# ===== Speaker Diarization =====
+whisperx==3.7.4
+pyannote.audio==3.1.1
+torch==2.1.2
+torchaudio==2.1.2
+torchvision==0.16.2
+transformers==4.39.3
+ctranslate2==4.5.0
+numpy==1.26.4
+scipy==1.11.4
+soundfile==0.12.1
