feat: Added integration and unit tests for API endpoints and agents

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -16,6 +16,8 @@ asyncio_mode = auto
 markers =
     unit: Unit tests
     integration: Integration tests
+    e2e: End-to-end tests
+    performance: Performance tests
     slow: Slow running tests
     requires_gpu: Tests that require GPU
 
