--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -10,8 +10,12 @@ addopts =
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
+    --cov-fail-under=80
     -v
 asyncio_mode = auto
+filterwarnings =
+    ignore::DeprecationWarning:.*SwigPy.*
+    ignore::DeprecationWarning:.*swigvarlink.*
 
 markers =
     unit: Unit tests
